--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,12 @@ OPENAI_API_KEY="sk-your_openai_api_key_here"
 # Ollama Configuration
 OLLAMA_BASE_URL="http://ollama:11434" # If running Ollama in Docker Compose, use service name
 # OLLAMA_BASE_URL="http://localhost:11434" # If running Ollama locally
-OLLAMA_CODE_MODEL="codellama:7b-instruct" # Or your preferred code model like deepcoder, mistral etc.
+OLLAMA_HELPER_MODEL="codellama:7b-instruct" # Or your preferred code model like deepcoder, mistral etc.
                                         # Ensure you've pulled this model in Ollama: `ollama pull codellama:7b-instruct`
+OLLAMA_REFINER_MODEL="codellama:7b-instruct"
+
+CRAG_RELEVANCE_THRESHOLD_HIGH=0.7
+CRAG_RELEVANCE_THRESHOLD_LOW=0.3
 
 # Vector Store Configuration
 FAISS_INDEX_PATH="./data/faiss_index"
